# mikumo

./: .gitignore  README.md  __init__.py  inari.sh  setup.cfg
doc/mikumo/: compute-py.md  dns-py.md  id-py.md  index.md  util-py.md
docs/: conf.py  index.rst  modules.rst
docs/_build/doctrees/: environment.pickle  index.doctree  main.doctree  mikumo.doctree  modules.doctree  setup.doctree
docs/_build/doctrees/hoge/: foo.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  main.html  mikumo.html  modules.html  objects.inv  search.html  searchindex.js  setup.html
docs/_build/html/_sources/: mikumo.rst.txt
docs/_build/html/hoge/: foo.html
src/mikumo/: __init__.py  compute.py  dns.py  id.py  identity.py  util.py
