[metadata]
name = mikumo
version = file: VERSION
license_file = LICENSE
url = https://github.com/taku-n/mikumo/
author = Takuto Nanjo
author_email = 16991946+taku-n@users.noreply.github.com
description = A library for ConoHa API.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages = find:
install_requires =

[options.packages.find]
where=src
